force-app/main/default/objects/exam__c/exam__c.object-meta.xml
<CustomObject>
    <label>Exam</label>
    <nameField>
        <label>Exam Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Exams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>