force-app/main/default/objects/exam__c/fields/datetime_of_exam__c.field-meta.xml
<CustomField>
    <fullName>datetime_of_exam__c</fullName>
    <label>Datetime of Exam</label>
    <type>DateTime</type>
</CustomField>