force-app/main/default/objects/exam__c/fields/total_score__c.field-meta.xml
<CustomField>
    <fullName>total_score__c</fullName>
    <label>Total Score</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>